samples/mfc/standard/01_Geometry/src/ISession2D/ISession_Direction.h
@@ -15,14 +15,15 @@ class ISession_Direction : public AIS_InteractiveObject
 {
 public:
   TCollection_ExtendedString myText;
-  void SetText(TCollection_ExtendedString& aText);
-  void SetText(Standard_CString aText);
+  void SetText (TCollection_ExtendedString& aText);
+  void SetText (Standard_CString aText);
+  void SetLineAspect (const Handle(Prs3d_LineAspect)& theAspect);
   ISession_Direction();
-  ISession_Direction(const gp_Pnt& aPnt,const gp_Dir&   aDir,Standard_Real aLength=1,Standard_Real anArrowLength=1);
-  ISession_Direction(const gp_Pnt& aPnt,const gp_Vec&   aVec,Standard_Real anArrowLength=1);
+  ISession_Direction (const gp_Pnt& aPnt,const gp_Dir& aDir,Standard_Real aLength=1,Standard_Real anArrowLength=1);
+  ISession_Direction (const gp_Pnt& aPnt,const gp_Vec& aVec,Standard_Real anArrowLength=1);
 
-  ISession_Direction(const gp_Pnt2d& aPnt2d,const gp_Dir2d&   aDir2d,Standard_Real aLength=1);
-  ISession_Direction(const gp_Pnt2d& aPnt2d,const gp_Vec2d&   aVec2d);
+  ISession_Direction (const gp_Pnt2d& aPnt2d,const gp_Dir2d& aDir2d,Standard_Real aLength=1);
+  ISession_Direction (const gp_Pnt2d& aPnt2d,const gp_Vec2d& aVec2d);
 
   virtual ~ISession_Direction();
   DEFINE_STANDARD_RTTI(ISession_Direction)
