samples/mfc/standard/01_Geometry/src/StdAfx.h
@@ -191,6 +191,7 @@
 #include <Graphic3d_Group.hxx>
 #include <Graphic3d_Array1OfVertex.hxx>
 #include <Graphic3d_ArrayOfPolylines.hxx>
+#include <Graphic3d_ArrayOfSegments.hxx>
 #include <GProp_PEquation.hxx>
 #include <gp.hxx>
 #include <gp_Ax2d.hxx>
@@ -214,6 +215,7 @@
 
 #include <Poly_Triangulation.hxx>
 #include <Precision.hxx>
+#include <Prs3d_Arrow.hxx>
 #include <Prs3d_Root.hxx>
 #include <Prs3d_Text.hxx>
 #include <Prs3d_ArrowAspect.hxx>
